--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,31 @@
 annotated-types==0.7.0
 anyio==4.4.0
 asgiref==3.8.1
+bleach==6.1.0
 certifi==2024.7.4
+charset-normalizer==3.3.2
+click==8.1.7
 colorama==0.4.6
 distro==1.9.0
 Django==5.0.7
 django-environ==0.11.2
+gTTS==2.5.2
 h11==0.14.0
 httpcore==1.0.5
 httpx==0.27.0
 idna==3.7
+Markdown==3.6
+markdown2==2.5.0
 openai==1.35.13
 pydantic==2.8.2
 pydantic_core==2.20.1
+requests==2.32.3
+six==1.16.0
 sniffio==1.3.1
 sqlparse==0.5.0
+tinycss2==1.2.1
 tqdm==4.66.4
 typing_extensions==4.12.2
 tzdata==2024.1
+urllib3==2.2.2
+webencodings==0.5.1
