--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ distro==1.9.0
 Django==5.0.7
 django-environ==0.11.2
 gTTS==2.5.2
+gunicorn==22.0.0
 h11==0.14.0
 httpcore==1.0.5
 httpx==0.27.0
@@ -17,6 +18,7 @@ idna==3.7
 Markdown==3.6
 markdown2==2.5.0
 openai==1.35.13
+packaging==24.1
 pydantic==2.8.2
 pydantic_core==2.20.1
 requests==2.32.3
